src/vterm.nim


########## VTermScreen ###########
proc screen*(vt: ptr VTerm): ptr VTermScreen {.importc: "vterm_obtain_screen".}
proc setCallbacks*(screen: ptr VTermScreen; callbacks: ptr VTermScreenCallbacks; user: pointer) {.importc: "vterm_screen_set_callbacks".}
proc getCbdata*(screen: ptr VTermScreen): pointer {.importc: "vterm_screen_get_cbdata".}
proc setUnrecognisedFallbacks*(screen: ptr VTermScreen; fallbacks: ptr VTermStateFallbacks; user: pointer) {.importc: "vterm_screen_set_unrecognised_fallbacks".}
proc getUnrecognisedFbdata*(screen: ptr VTermScreen): pointer {.importc: "vterm_screen_get_unrecognised_fbdata".}
proc enableReflow*(screen: ptr VTermScreen; reflow: bool) {.importc: "vterm_screen_enable_reflow".}
proc enableAltscreen*(screen: ptr VTermScreen; altscreen: cint) {.importc: "vterm_screen_enable_altscreen".}
proc flushDamage*(screen: ptr VTermScreen) {.importc: "vterm_screen_flush_damage".}
proc setDamageMerge*(screen: ptr VTermScreen; size: VTermDamageSize) {.importc: "vterm_screen_set_damage_merge".}
proc reset*(screen: ptr VTermScreen; hard: cint) {.importc: "vterm_screen_reset".}
proc getChars*(screen: ptr VTermScreen; chars: ptr uint32; len: csize_t; rect: VTermRect): csize_t {.importc: "vterm_screen_get_chars".}
proc getText*(screen: ptr VTermScreen; str: cstring; len: csize_t; rect: VTermRect): csize_t {.importc: "vterm_screen_get_text".}
proc getAttrsExtent*(screen: ptr VTermScreen; extent: ptr VTermRect; pos: VTermPos; attrs: VTermAttrMask): cint {.importc: "vterm_screen_get_attrs_extent".}
proc getCell*(screen: ptr VTermScreen; pos: VTermPos; cell: ptr VTermScreenCell): cint {.importc: "vterm_screen_get_cell".}
proc isEol*(screen: ptr VTermScreen; pos: VTermPos): cint {.importc: "vterm_screen_is_eol".}
proc convertColorToRgb*(screen: ptr VTermScreen; col: ptr VTermColor) {.importc: "vterm_screen_convert_color_to_rgb".}
proc setDefaultColors*(screen: ptr VTermScreen; default_fg: ptr VTermColor; default_bg: ptr VTermColor) {.importc: "vterm_screen_set_default_colors".}

########## VTermState ###########
proc state*(vt: ptr VTerm): ptr VTermState {.importc: "vterm_obtain_state".}
proc setCallbacks*(state: ptr VTermState; callbacks: ptr VTermStateCallbacks; user: pointer) {.importc: "vterm_state_set_callbacks".}
proc getCbdata*(state: ptr VTermState): pointer {.importc: "vterm_state_get_cbdata".}
proc setUnrecognisedFallbacks*(state: ptr VTermState; fallbacks: ptr VTermStateFallbacks; user: pointer) {.importc: ":".}
proc getUnrecognisedFbdata*(state: ptr VTermState): pointer {.importc: "vterm_state_get_unrecognised_fbdata".}
proc reset*(state: ptr VTermState; hard: cint) {.importc: "vterm_state_reset".}
proc getCursorpos*(state: ptr VTermState; cursorpos: ptr VTermPos) {.importc: "vterm_state_get_cursorpos".}
proc getDefaultColors*(state: ptr VTermState; default_fg: ptr VTermColor; default_bg: ptr VTermColor) {.importc: "vterm_state_get_default_colors".}
proc getPaletteColor*(state: ptr VTermState; index: cint; col: ptr VTermColor) {.importc: "vterm_state_get_palette_color".}
proc setDefaultColors*(state: ptr VTermState; default_fg: ptr VTermColor; default_bg: ptr VTermColor) {.importc: "vterm_state_set_default_colors".}
proc setPaletteColor*(state: ptr VTermState; index: cint; col: ptr VTermColor) {.importc: "vterm_state_set_palette_color".}
proc setBoldHighbright*(state: ptr VTermState; bold_is_highbright: cint) {.importc: "vterm_state_set_bold_highbright".}
proc getPenattr*(state: ptr VTermState; attr: VTermAttr; val: ptr VTermValue): cint {.importc: "vterm_state_get_penattr".}
proc setTermprop*(state: ptr VTermState; prop: VTermProp; val: ptr VTermValue): cint {.importc: "vterm_state_set_termprop".}
proc focusIn*(state: ptr VTermState) {.importc: "vterm_state_focus_in".}
proc focusOut*(state: ptr VTermState) {.importc: "vterm_state_focus_out".}
proc getLineinfo*(state: ptr VTermState; row: cint): ptr VTermLineInfo {.importc: "vterm_state_get_lineinfo".}

{.pop.}

const VTERM_COLOR_TYPE_MASK = 1.uint8

proc isIndexed*(col: VTermColor): bool =
  ((col.`type` and VTERM_COLOR_TYPE_MASK) == ord(VTERM_COLOR_INDEXED).uint8)

proc isRGB*(col: VTermColor): bool =
  ((col.`type` and VTERM_COLOR_TYPE_MASK) == ord(VTERM_COLOR_RGB).uint8)

proc isDefaultFg*(col: VTermColor): bool =
  (col.`type` and ord(VTERM_COLOR_DEFAULT_FG).uint8) != 0

proc isDefaultBg*(col: VTermColor): bool =
  (col.`type` and ord(VTERM_COLOR_DEFAULT_BG).uint8) != 0


############################# end of vterm #############################

proc inputToVtermKey(input: int64): VTermKey =
  return case input
  of INPUT_ENTER: VTERM_KEY_ENTER
  of INPUT_ESCAPE: VTERM_KEY_ESCAPE
  of INPUT_BACKSPACE: VTERM_KEY_BACKSPACE
  of INPUT_DELETE: VTERM_KEY_DEL
  of INPUT_TAB: VTERM_KEY_TAB
  of INPUT_LEFT: VTERM_KEY_LEFT
  of INPUT_RIGHT: VTERM_KEY_RIGHT
  of INPUT_UP: VTERM_KEY_UP
  of INPUT_DOWN: VTERM_KEY_DOWN
  of INPUT_HOME: VTERM_KEY_HOME
  of INPUT_END: VTERM_KEY_END
  of INPUT_PAGE_UP: VTERM_KEY_PAGEUP
  of INPUT_PAGE_DOWN: VTERM_KEY_PAGEDOWN
  of INPUT_F1: VTERM_KEY_FUNCTION_1
  of INPUT_F2: VTERM_KEY_FUNCTION_2
  of INPUT_F3: VTERM_KEY_FUNCTION_3
  of INPUT_F4: VTERM_KEY_FUNCTION_4
  of INPUT_F5: VTERM_KEY_FUNCTION_5
  of INPUT_F6: VTERM_KEY_FUNCTION_6
  of INPUT_F7: VTERM_KEY_FUNCTION_7
  of INPUT_F8: VTERM_KEY_FUNCTION_8
  of INPUT_F9: VTERM_KEY_FUNCTION_9
  of INPUT_F10: VTERM_KEY_FUNCTION_10
  of INPUT_F11: VTERM_KEY_FUNCTION_11
  of INPUT_F12: VTERM_KEY_FUNCTION_12
  else: VTERM_KEY_NONE

proc toVtermModifiers(modifiers: Modifiers): uint32 =
  if Modifier.Shift in modifiers:
    result = result or VTERM_MOD_SHIFT.ord.uint32
  if Modifier.Control in modifiers:
    result = result or VTERM_MOD_CTRL.ord.uint32
  if Modifier.Alt in modifiers:
    result = result or VTERM_MOD_ALT.ord.uint32

const PROC_THREAD_ATTRIBUTE_PSEUDOCONSOLE: DWORD = 131094

proc CreatePseudoConsole*(size: wincon.COORD, hInput: HANDLE, hOutput: HANDLE, dwFlags: DWORD, phPC: ptr HPCON): HRESULT {.winapi, stdcall, dynlib: "kernel32", importc.}
proc ClosePseudoConsole*(hPC: HPCON) {.winapi, stdcall, dynlib: "kernel32", importc.}

proc prepareStartupInformation*(hpc: HPCON): STARTUPINFOEX =
  ZeroMemory(addr(result), sizeof((result)))
  result.StartupInfo.cb = sizeof((STARTUPINFOEX)).DWORD

  var bytesRequired: SIZE_T
  InitializeProcThreadAttributeList(nil, 1, 0, addr(bytesRequired))

  result.lpAttributeList = cast[PPROC_THREAD_ATTRIBUTE_LIST](HeapAlloc(GetProcessHeap(), 0, bytesRequired))

  if result.lpAttributeList == nil:
    raiseOSError(14.OSErrorCode)

  if InitializeProcThreadAttributeList(result.lpAttributeList, 1, 0, addr(bytesRequired)) == 0:
    HeapFree(GetProcessHeap(), 0, result.lpAttributeList)
    raiseOSError(osLastError())

  if UpdateProcThreadAttribute(result.lpAttributeList, 0,
                                 PROC_THREAD_ATTRIBUTE_PSEUDOCONSOLE, cast[LPVOID](hpc),
                                 sizeof((hpc)), nil, nil) == 0:
    HeapFree(GetProcessHeap(), 0, result.lpAttributeList)
    raiseOSError(osLastError())

type
  FileHandleStream = ref object of StreamObj
    handle: Handle
    atTheEnd: bool

proc closeHandleCheck(handle: Handle) {.inline.} =
  if handle.CloseHandle() == 0:
    raiseOSError(osLastError())

proc fileClose[T: Handle | FileHandle](h: var T) {.inline.} =
  if h > 4:
    closeHandleCheck(h)
    h = INVALID_HANDLE_VALUE.T

proc hsClose(s: Stream) =
  FileHandleStream(s).handle.fileClose()

proc hsAtEnd(s: Stream): bool = return FileHandleStream(s).atTheEnd

proc hsReadData(s: Stream, buffer: pointer, bufLen: int): int =
  var s = FileHandleStream(s)
  if s.atTheEnd: return 0
  var br: int32
  var a = ReadFile(s.handle, buffer, bufLen.cint, addr br, nil)
  # TRUE and zero bytes returned (EOF).
  # TRUE and n (>0) bytes returned (good data).
  # FALSE and bytes returned undefined (system error).
  if a == 0 and br != 0: raiseOSError(osLastError())
  s.atTheEnd = br == 0 #< bufLen
  result = br

proc hsWriteData(s: Stream, buffer: pointer, bufLen: int) =
  var s = FileHandleStream(s)
  var bytesWritten: int32
  var a = WriteFile(s.handle, buffer, bufLen.cint,
                            addr bytesWritten, nil)
  if a == 0: raiseOSError(osLastError())

proc newFileHandleStream(handle: Handle): owned FileHandleStream =
  result = FileHandleStream(handle: handle, closeImpl: hsClose, atEndImpl: hsAtEnd,
    readDataImpl: hsReadData, writeDataImpl: hsWriteData)

# proc createPipeHandles(rdHandle, wrHandle: var Handle) =
#   var sa: SECURITY_ATTRIBUTES
#   sa.nLength = sizeof(SECURITY_ATTRIBUTES).cint
#   sa.lpSecurityDescriptor = nil
#   sa.bInheritHandle = 1
#   if createPipe(rdHandle, wrHandle, sa, 0) == 0'i32:
#     raiseOSError(osLastError())

proc createTerminalBuffer*(screen: ptr VTermScreen, width: int, height: int): TerminalBuffer =
  result.initTerminalBuffer(width, height)
  var cell: VTermScreenCell
  var pos: VTermPos
  for row in 0..<height:
    var col: cint = 0
    for col in 0..<width:
      pos.row = row.cint
      pos.col = col.cint
      if screen.getCell(pos, addr(cell)):
        var c = TerminalChar(
          ch: cell.chars[0].Rune,
          fg: fgNone,
          bg: bgNone,
          # style: set[Style],
          # forceWrite: bool,
          # previousWideGlyph bool,
        )
        let fg = cell.fg
        if cell.fg.isRGB:
          c.fg = fgRGB
          c.fgColor = rgb(cell.fg.rgb.red, cell.fg.rgb.green, cell.fg.rgb.blue)
        elif cell.fg.isIndexed:
          c.fg = fgRGB
          let idx = cell.fg.indexed.idx
          screen.convertColorToRgb(cell.fg.addr)
          c.fgColor = rgb(cell.fg.rgb.red, cell.fg.rgb.green, cell.fg.rgb.blue)

        if cell.bg.isRGB:
          c.bg = bgRGB
          c.bgColor = rgb(cell.bg.rgb.red, cell.bg.rgb.green, cell.bg.rgb.blue)
        elif cell.bg.isIndexed:
          c.bg = bgRGB
          let idx = cell.bg.indexed.idx
          screen.convertColorToRgb(cell.bg.addr)
          c.bgColor = rgb(cell.bg.rgb.red, cell.bg.rgb.green, cell.bg.rgb.blue)

        result[col, row] = c

type
  InputEvent = object
    input: int64
    modifiers: Modifiers
    text: string

  OutputEventKind {.pure.} = enum TerminalBuffer, Size, Cursor
  OutputEvent = object
    case kind: OutputEventKind
    of OutputEventKind.TerminalBuffer:
      buffer: TerminalBuffer
    of OutputEventKind.Size:
      width: int
      height: int
    of OutputEventKind.Cursor:
      row: int
      col: int
      visible: bool

  ThreadState = object
    vterm: ptr VTerm
    screen: ptr VTermScreen
    inputWriteHandle: HANDLE
    outputReadHandle: HANDLE
    inputChannel: ptr Channel[InputEvent]
    outputChannel: ptr Channel[OutputEvent]
    sizeChannel: ptr Channel[tuple[width, height: int]]
    width: int
    height: int
    cursorVisible: bool

  Terminal* = ref object
    command: string
    hpcon: HPCON
    inputWriteHandle: HANDLE
    outputReadHandle: HANDLE
    vterm: ptr VTerm
    screen: ptr VTermScreen
    thread: Thread[ThreadState]
    inputChannel: ptr Channel[InputEvent] # todo: free this
    outputChannel: ptr Channel[OutputEvent] # todo: free this
    sizeChannel: ptr Channel[tuple[width, height: int]]
    terminalBuffer*: TerminalBuffer
    cursor*: tuple[row, col: int, visible: bool]
    onUpdated: Event[void]

proc handleOutputChannel(self: Terminal) {.async.} =
  # todo: cancel when closed
  while true:
    await sleepAsync(10.milliseconds)

    var updated = false
    while self.outputChannel[].peek() > 0:
      let event = self.outputChannel[].recv()
      # debugf"output event {event.kind}"
      case event.kind
      of OutputEventKind.TerminalBuffer:
        self.terminalBuffer = event.buffer
      of OutputEventKind.Size:
        discard
      of OutputEventKind.Cursor:
        self.cursor = (event.row, event.col, event.visible)

      updated = true

    if updated:
      self.onUpdated.invoke()

proc terminalThread(s: ThreadState) {.thread, nimcall.} =
  var state = s
